--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Travelblog</title>
 </head>
 <body>
+<h1>Welcome</h1>
 
+<!--<img alt="start-banner "src="images/welcome.png">-->
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/gsap.min.js"></script>
+<script src="js/gsap.min.js"></script>
+<script src="js/main.js"></script>
+<img alt="logo" src="images/Logo.svg" id="logo">
 </body>
 </html>
