--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <title>Travelblog</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
+    <style>
+        .parallax {
+            background-image: url("images/matterhorn.jpeg");
+            min-height: 350px;
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+    </style>
 </head>
 
 <body>
@@ -13,7 +24,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 <img alt="logo" src="images/Logo.svg" id="logo">
-<h2><strong>Travel Blog</strong></h2>
+<h2 class="animate__animated animate__bounce"><strong>Travel Blog</strong></h2>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="index.html">Home</a>
@@ -22,9 +33,6 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="views/blog.html">Blog<span class="sr-only">(current)</span></a>
-            </li>
             <li class="nav-item">
                 <a class="nav-link" href="views/impressum.html">Impressum</a>
             </li>
@@ -38,22 +46,55 @@
 <script src="js/gsap.min.js"></script>
 <script src="js/main.js"></script>
 
-<img alt="banner" src="images/welcome.png" id="welcome-banner">
-<img alt="pic" src="images/city.jpeg" id="city">
-<img alt="pic" src="images/matterhorn.jpeg" id="matterhorn">
-<img alt="pic" src="images/yellowstone.jpeg" id="yellowstone">
+<div class="spacer s2"></div>
+<div class="spacer s0" id="trigger"></div>
+<div class="parallax"></div>
+
+<div style="height:1000px;background-color:white;font-size:36px">
+    <img alt="pic" src="images/city.jpeg" id="city">
+    <img alt="pic" src="images/matterhorn.jpeg" id="matterhorn">
+    <img alt="pic" src="images/yellowstone.jpeg" id="yellowstone">
+
+    <div class="text-matterhorn">
+        <p class="text_1">Das Matterhorn ist einer der höchsten Berge der Alpen. Wegen seiner markanten Gestalt und seiner Besteigungsgeschichte ist das Matterhorn einer der bekanntesten Berge der Welt.
+            Für die Schweiz ist es ein Wahrzeichen und für Touristen eine grosse Attraktion. Der Berg steht im Wallis zwischen Zermatt und Breuil-Cervinia.</p>
+    </div>
+
+    <div class="text-city">
+
+    </div>
+
+    <div class="text-yellowstone">
+        <p text="text2">Der Vulkan Yellowstone liegt unter dem gleichnamigen und namensgebenden Nationalpark in den Vereinigten Staaten. Der Yellowstone Vulkan gilt als Supervulkan.
+            Der Yellowstone besitzt noch eine große Magmakammer, so dass ein großer Ausbruch weiterhin irgendwann möglich erscheint.</p>
+    </div>
+
+    <h2 class="w3-center">Manual Slideshow</h2>
+
+    <div class="w3-content w3-display-container">
+        <img class="mySlides" src="https://www.w3schools.com/w3css/img_fjords.jpg" style="width:100%">
+        <img class="mySlides" src="https://www.w3schools.com/w3css/img_lights.jpg" style="width:100%">
+        <img class="mySlides" src="https://www.w3schools.com/w3css/img_mountains.jpg" style="width:100%">
+        <img class="mySlides" src="https://www.w3schools.com/w3css/img_forest.jpg" style="width:100%">
+
+        <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+        <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+    </div>
+</div>
+
 
 <div class="card text-center">
     <div class="card-header">
-        Featured
+        <p>Featured</p>
     </div>
     <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title">Travel Blog</h5>
+        <p class="card-text">M152 Multimediainhalte in Webseite einbinden</p>
     </div>
     <div class="card-footer text-muted">
-        By Flora Gashi
+        <p>By Flora Gashi</p>
     </div>
 </div>
+
 </body>
 </html>
